# shabby

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  docs.yml
site/doc/: index.html
src/: cli.rs  command.rs  config.rs  dirs.rs  lib.rs  logging.rs  main.rs
src/cli/: verbose.rs
src/command/: case.rs  dice.rs
src/logging/: compat.rs  level.rs
