[package]
name = "shabby"
version = "0.1.0"
edition = "2024"
description = "A Telegram userbot for Sharparam"
repository = "https://github.com/Sharparam/shabby"
license = "MPL-2.0"
keywords = ["telegram", "userbot", "bot"]

[dependencies]
color-eyre = "0.6.4"
grammers-client = "0.7.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
