[package]
name = "shabby"
version = "0.1.0"
edition = "2024"
description = "A Telegram userbot for Sharparam"
repository = "https://github.com/Sharparam/shabby"
license = "MPL-2.0"
keywords = ["telegram", "userbot", "bot"]

[dependencies]
clap = { version = "4.5.39", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.5"
etcetera = "0.10.0"
grammers-client = { version = "0.7.0", features = ["markdown"] }
indoc = "2.0.6"
kdl = "6.3.4"
shell-words = "1.1.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
